Downloads/TCA-InfraForge/tools/argocd-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server-standalone
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      containers:
      - name: argocd-server
        image: argoproj/argocd:latest
        ports:
        - containerPort: 8080
        command:
        - /usr/local/bin/argocd-server
        - --insecure
        - --staticassets
        - /shared/app
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: default
spec:
  selector:
    app: argocd-server
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
