Downloads/TCA-InfraForge/tools/jaeger-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-standalone
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
        - containerPort: 14268
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: default
spec:
  selector:
    app: jaeger
  ports:
  - port: 16686
    targetPort: 16686
  type: ClusterIP
